test/Execute/SyntaxErrorTest/try_without_handler.typh
try {
    pass
}

"""stderr
syntax error: $FILE:1:1
  expected 'except' or 'finally' block
    1 |  try {
    2 |      pass
    3 |  }
"""
